# ghostpost

./: pyproject.toml
.history/ghostpost/ghostpost/: forms_20200211140247.py  forms_20200211140249.py  forms_20200211140251.py  forms_20200211140307.py  forms_20200211140318.py  forms_20200211140320.py  forms_20200211140327.py  forms_20200211140331.py  forms_20200211140334.py  forms_20200211143742.py  forms_20200211143746.py  forms_20200211143804.py  forms_20200211145504.py  forms_20200211145526.py  forms_20200211145537.py  forms_20200211145723.py  forms_20200211145724.py  forms_20200211145727.py  forms_20200211145732.py  forms_20200211150835.py  forms_20200211162506.py  forms_20200211162515.py  forms_20200211162517.py  forms_20200211162519.py  forms_20200211162520.py  forms_20200211162521.py  forms_20200211162524.py  forms_20200211163059.py  models_20200210155643.py  models_20200210155645.py  models_20200210155653.py  models_20200210155655.py  models_20200210155658.py  models_20200210155710.py  models_20200210155715.py  models_20200210155730.py  models_20200210155731.py  models_20200210155740.py  models_20200210155741.py  models_20200210155744.py  (+283 more)
.history/ghostpost/ghostpost/Templates/: index_20200211144021.html  index_20200211144026.html  index_20200211144029.html  index_20200211144100.html  index_20200211144107.html  index_20200211144112.html  index_20200211144138.html  (+106 more)
ghostpost/ghostpost/: urls.py  views.py
ghostpost/ghostpost/Templates/: index.html
ghostpost/ghostpost/migrations/: 0001_initial.py  0002_auto_20200211_2010.py  0003_post_bost_or_roast.py
